ie11 scrollbar fix: http://msdn.microsoft.com/en-us/library/ie/hh771902(v=vs.85).aspx

--- a/css/style.less
+++ b/css/style.less
@@ -26,6 +26,8 @@
 @footerHeight: 100px;
 html, body {
     height: 100%;
+    min-width: 320px;
+    -ms-overflow-style: scrollbar;
 }
 
 #wrapper {
